--- a/style.css
+++ b/style.css
@@ -1,7 +1,23 @@
-@charset "utf-8";
+html, body {
+    box-sizing: border-box;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+		text-align: center;
+}
 
+footer {
+    flex-grow: 0;
+    flex-shrink: 0;
+}
 #canvas {
-	border: 1px solid black;
-	margin: auto;
-	background-color: #7fff00;
+    box-sizing: border-box;
+    min-height: 100%;
+		margin: auto;
+    display: flex;
+    flex-direction: column;
+		background-color: silver;
+}
+main {
+    flex-grow: 1;
 }
