--- a/style.css
+++ b/style.css
@@ -34,8 +34,11 @@ span {
 
 main {
   flex-grow: 1;
-  height: 500px;
-  width: 500px;
+  height: 360px;
+  width: 360px;
+  align-self: center;
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 canvas {
