--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 html,
 body {
   box-sizing: border-box;
@@ -22,7 +31,6 @@ header {
 }
 
 button {
-  text-align: left;
   border-color: #b3e820;
   background-color: #0000cd;
   color: #fffff0;
@@ -45,12 +53,22 @@ canvas {
 
 #canvas0 {
   z-index: 1;
-  background-color: ivory;
+  animation-name: spin;
+  animation-duration: 8s;
+  animation-timing-function: linear;
+  animation-direction: normal;
+  animation-iteration-count: infinite;
+	background-color: rgba(255, 255, 128, 0.1);
 }
 
 #canvas1 {
   z-index: 2;
-  background-color: transparent;
+  animation-name: spin;
+  animation-duration: 8s;
+  animation-timing-function: linear;
+  animation-direction: reverse;
+  animation-iteration-count: infinite;
+  background-color: rgba(255, 255, 128, 0.1);
 }
 
 footer {
@@ -59,5 +77,5 @@ footer {
   background-color: #0000cd;
   text-align: center;
   color: #fffff0;
-	font-weight: 900;
+  font-weight: 900;
 }
