backgroud-color of buttons #b22202 this implies the quality of art. Now that I ...

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button {
 	border-width: thin;
   border-style: dashed;
   border-color: #b3e820;
-  background-color: #0000cd;
+  background-color: #b22202;
   color: #fffff0;
 	text-align: left;
 }
